--- a/wiki/threads/3722.md
+++ b/wiki/threads/3722.md
@@ -2,16 +2,12 @@
 Game Modding | Call of Duty: Black Ops 3 | Asset Importing
 
 ---
-<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">VividNo</span></span>:</strong>
+<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">VividNo</span></span>:</strong></p>
 
-<p>So my cold war 1911&#39;s sound is working perfectly fine<br />But every weapon ive added after that has had no sound example: (ANY WWII GUNS), (ANY COLD WAR GUNS), (ANY BLACK OPS 1 GUNS)<br />Im sure ive done it all right i did the same thing as i did with the 1911 (which works)<br />Ive added the line of text to user_aliases, zm_levelcommon_weapons (in my zm_&quot;mapname&quot;) and my zone folder<br /><br /><br />Any help would be appreciated :)</p>
+<p class="archive-post">So my cold war 1911&#39;s sound is working perfectly fine<br />But every weapon ive added after that has had no sound example: (ANY WWII GUNS), (ANY COLD WAR GUNS), (ANY BLACK OPS 1 GUNS)<br />Im sure ive done it all right i did the same thing as i did with the 1911 (which works)<br />Ive added the line of text to user_aliases, zm_levelcommon_weapons (in my zm_&quot;mapname&quot;) and my zone folder<br /><br /><br />Any help would be appreciated :)</p>
+<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Markus Darius</span></span>:</strong></p>
 
----
-<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Markus Darius</span></span>:</strong>
+<p class="archive-post">Hi, did you solve the problem? Im with the same problem here and I can&#39;t fix it</p>
+<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">kikail</span></span>:</strong></p>
 
-<p>Hi, did you solve the problem? Im with the same problem here and I can&#39;t fix it</p>
-
----
-<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">kikail</span></span>:</strong>
-
-<p>check if the sound file is .wav and if the frequence is 48000Hz in audacity like that for each sound <a href="{{ '/wiki/threads/assets/1259.PNG' | relative_url }}">Download "Capture.PNG"</a></p>
+<p class="archive-post">check if the sound file is .wav and if the frequence is 48000Hz in audacity like that for each sound <a href="{{ '/wiki/threads/assets/a.1259.PNG' | relative_url }}">Download "Capture.PNG"</a></p>
