--- a/wiki/threads/3839.md
+++ b/wiki/threads/3839.md
@@ -2,31 +2,21 @@
 Game Modding | Call of Duty: Black Ops 3 | General Discussion
 
 ---
-<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">easyskanka</span></span>:</strong>
+<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">easyskanka</span></span>:</strong></p>
 
-<p>was a good run boys, thanks for all the help on here over the years</p>
+<p class="archive-post">was a good run boys, thanks for all the help on here over the years</p>
+<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Spiki</span></span>:</strong></p>
 
----
-<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Spiki</span></span>:</strong>
+<p class="archive-post">We’re making a new forum. Don’t worry</p>
+<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Duck</span></span>:</strong></p>
 
-<p>We’re making a new forum. Don’t worry</p>
+<p class="archive-post"><blockquote>We’re making a new forum. Don’t worry<br /></blockquote><br />OOOO what&#39;s it gonna be called so I know where to go?</p>
+<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Spiki</span></span>:</strong></p>
 
----
-<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Duck</span></span>:</strong>
+<p class="archive-post">Probably we&#39;ll reopen t7mods.com but if that falls through for whatever reason it&#39;ll be boatsandhoesbo3modding.com</p>
+<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Harry Bo21</span></span>:</strong></p>
 
-<p><blockquote>We’re making a new forum. Don’t worry<br /></blockquote><br />OOOO what&#39;s it gonna be called so I know where to go?</p>
+<p class="archive-post"><blockquote>Probably we&#39;ll reopen t7mods.com but if that falls through for whatever reason it&#39;ll be boatsandhoesbo3modding.com<br /></blockquote><br />Perfect as long as you don’t want ppl registering - as he had that turned off literally the entire time on the last one<br /><br />Who needs members or the ability to post eh<br /><br />You’ll have to wait 6 months for him to glitch the shit out of vanguard anyway</p>
+<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Spiki</span></span>:</strong></p>
 
----
-<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Spiki</span></span>:</strong>
-
-<p>Probably we&#39;ll reopen t7mods.com but if that falls through for whatever reason it&#39;ll be boatsandhoesbo3modding.com</p>
-
----
-<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Harry Bo21</span></span>:</strong>
-
-<p><blockquote>Probably we&#39;ll reopen t7mods.com but if that falls through for whatever reason it&#39;ll be boatsandhoesbo3modding.com<br /></blockquote><br />Perfect as long as you don’t want ppl registering - as he had that turned off literally the entire time on the last one<br /><br />Who needs members or the ability to post eh<br /><br />You’ll have to wait 6 months for him to glitch the shit out of vanguard anyway</p>
-
----
-<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Spiki</span></span>:</strong>
-
-<p>can you stop acting like a 4 year old?</p>
+<p class="archive-post">can you stop acting like a 4 year old?</p>
