--- a/wiki/threads/3840.md
+++ b/wiki/threads/3840.md
@@ -2,11 +2,9 @@
 Game Modding | Call of Duty: Black Ops 3 | Radiant
 
 ---
-<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Duck</span></span>:</strong>
+<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Duck</span></span>:</strong></p>
 
-<p>The shadows look fine in radiant but in game they look all low res, its not the model being downgraded since I went into ape and removed the lower detail ones just to be sure, I have no idea what is causing this and I&#39;m tearing my hair out trying to figure it out lol, any help here would be appreciated.<br /><img src="https://cdn.discordapp.com/attachments/725949627651850282/908795915995848725/unknown.png"><img src="https://cdn.discordapp.com/attachments/529421724660400150/908801231051448360/1.png"></p>
+<p class="archive-post">The shadows look fine in radiant but in game they look all low res, its not the model being downgraded since I went into ape and removed the lower detail ones just to be sure, I have no idea what is causing this and I&#39;m tearing my hair out trying to figure it out lol, any help here would be appreciated.<br /><img style="max-width: 500px;" src="https://cdn.discordapp.com/attachments/725949627651850282/908795915995848725/unknown.png"><img style="max-width: 500px;" src="https://cdn.discordapp.com/attachments/529421724660400150/908801231051448360/1.png"></p>
+<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">No_One✔</span></span>:</strong></p>
 
----
-<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">No_One✔</span></span>:</strong>
-
-<p>You can try using light culling (iirc). So select the light, and I think somewhere in the middle of the light properties, there is a variable that you can change (I think it&#39;s called light_culling, or somewhere along those lines). Change it to about 0.05 or 0.1, and the light should automatically not cast the shadows that you wanted gone.<br /><br />Also light culling is super useful to make the light entities appear like they are directly casted from ceiling or other spot lights, without being reliant on the radius to do so. You can see at the top of the ceiling light, that the light is being casted outside of the object too.</p>
+<p class="archive-post">You can try using light culling (iirc). So select the light, and I think somewhere in the middle of the light properties, there is a variable that you can change (I think it&#39;s called light_culling, or somewhere along those lines). Change it to about 0.05 or 0.1, and the light should automatically not cast the shadows that you wanted gone.<br /><br />Also light culling is super useful to make the light entities appear like they are directly casted from ceiling or other spot lights, without being reliant on the radius to do so. You can see at the top of the ceiling light, that the light is being casted outside of the object too.</p>
