--- a/wiki/threads/3320.md
+++ b/wiki/threads/3320.md
@@ -2,101 +2,63 @@
 Game Asset Reversing | Releases
 
 ---
-<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Qelifern</span></span>:</strong>
+<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Qelifern</span></span>:</strong></p>
 
-<p><span style="font-size:1.5em;">First of all, this is the first time I&#39;m releasing something this big, it has taken a long time to even get to this point with these staffs.<br />Hopefully everything is included in the download, however if something is missing, point it out in the comments.</span><br /><br />The current state of these Staffs are W.I.P<br />However they are complete with sounds, animations and effects.<br />The only thing missing is the charge up sounds.<br />Also I&#39;ve got no clue how to limit the viewmodel FOV to cover up the poor Treyarch animations.<br /><br />You have full access to all the scripts, ripped from Bo3 with Cerberus (Scobalula) then modified.<br /><br />Here is a Youtube video showing the staves in action.<br /><iframe type="text/html" width="640" height="360" src="https://www.youtube.com/embed/O5ADs6PvpAg" frameborder="0"></iframe><br /><br />Some changes have been made since.<br /><br />A full credits list is included in the download but I want to thank HarryBo21 and Scobalula especially.<br /><br />HarryBo21&#39;s FX Library is required:<br /><a href="https://www.t7mods.com/viewtopic.php?f=4&t=9">https://www.t7mods.com/viewtopic.php?f=4&amp;t=9</a><br /><br />Almost all the scripts come from or originated from Scobalula&#39;s Cerberus so many thanks to you sir.<br /><br /><span style="font-size:1.5em;">Instructions for installation and upgrade steps are also included.</span><br /><br /><br /><img style="max-width: 500px;" src="{{ '/wiki/threads/assets/792.jpg' | relative_url }}"><img style="max-width: 500px;" src="{{ '/wiki/threads/assets/793.png' | relative_url }}"><br /><br /><br /><br /><span style="font-size:1.6em;">&quot;Don&#39;t be a jerk&quot;, please if you use this to create content, give credit where credit is due.</span><br /><br /><br /><br /><img style="max-width: 500px;" src="{{ '/wiki/threads/assets/794.png' | relative_url }}"><img style="max-width: 500px;" src="{{ '/wiki/threads/assets/795.png' | relative_url }}"><br /><br /><br /><br /><span style="font-size:1.5em;">Staff Code Names</span><br />staff_fire_zm<br />staff_fire_upgraded_zm<br />staff_air_zm<br />staff_air_upgraded_zm<br />staff_lightning_zm<br />staff_lightning_upgraded_zm<br />staff_water_zm<br />staff_water_upgraded_zm<br /><br />Ex. /give staff_fire<br /><br /><br /><span style="font-size:1.5em;">If you run into troubles when installing, make sure you read through all the steps and see if you missed something before commenting.</span><br /><br />------------------------------------------<br /><br />                   <span style="font-size:1.5em;"><a href="https://mega.nz/file/urx0QYhD#CUpJ_bc-r0ovLhYaaZMvrKhkAkbqRPgHklrxilVZAJ0">DOWNLOAD</a>  v1.0.1</span><br /><br />------------------------------------------<br /><br /><span style="font-size:1.5em;"><strong>Credits:</strong></span><br />AllModz<br />AndyWhelen<br />Azsry<br />BluntStuffy<br />Collie<br />DTZxPorter<br />Easyskanka<br />Erthrock<br />Frost Iceforge<br />GerardS0406<br />HarryBo21<br />HitmanVere<br />Hubashuba<br />IperBreach<br />JAMAKINBACONMAN<br />JBird632<br />JiffyNoodles<br />Lilrifa<br />MAKECENTS<br />MZSlayer<br />MadGaz<br />Magicman<br />Mathfag<br />NoobForLunch<br />PCModder<br />ProGamerzFTW<br />ProRevenge<br />Raptroes<br />RedSpace200<br />Scobalula<br />Sethnorris<br />Smasher248<br />StevieWonder87<br />Symbo<br />TheIronicTruth<br />TheSkyeLord<br />TomBMX<br />Treyarch and Activision<br />Will Luffey<br />WillJones1989<br />Yen466<br />Zeroy<br />alexbgt<br />thezombieproject</p>
+<p class="archive-post"><span style="font-size:1.5em;">First of all, this is the first time I&#39;m releasing something this big, it has taken a long time to even get to this point with these staffs.<br />Hopefully everything is included in the download, however if something is missing, point it out in the comments.</span><br /><br />The current state of these Staffs are W.I.P<br />However they are complete with sounds, animations and effects.<br />The only thing missing is the charge up sounds.<br />Also I&#39;ve got no clue how to limit the viewmodel FOV to cover up the poor Treyarch animations.<br /><br />You have full access to all the scripts, ripped from Bo3 with Cerberus (Scobalula) then modified.<br /><br />Here is a Youtube video showing the staves in action.<br /><iframe type="text/html" width="640" height="360" src="https://www.youtube.com/embed/O5ADs6PvpAg" frameborder="0"></iframe><br /><br />Some changes have been made since.<br /><br />A full credits list is included in the download but I want to thank HarryBo21 and Scobalula especially.<br /><br />HarryBo21&#39;s FX Library is required:<br /><a href="https://www.t7mods.com/viewtopic.php?f=4&t=9">https://www.t7mods.com/viewtopic.php?f=4&amp;t=9</a><br /><br />Almost all the scripts come from or originated from Scobalula&#39;s Cerberus so many thanks to you sir.<br /><br /><span style="font-size:1.5em;">Instructions for installation and upgrade steps are also included.</span><br /><br /><br /><img style="max-width: 500px;" src="{{ '/wiki/threads/assets/a.792.jpg' | relative_url }}"><img style="max-width: 500px;" src="{{ '/wiki/threads/assets/a.793.png' | relative_url }}"><br /><br /><br /><br /><span style="font-size:1.6em;">&quot;Don&#39;t be a jerk&quot;, please if you use this to create content, give credit where credit is due.</span><br /><br /><br /><br /><img style="max-width: 500px;" src="{{ '/wiki/threads/assets/a.794.png' | relative_url }}"><img style="max-width: 500px;" src="{{ '/wiki/threads/assets/a.795.png' | relative_url }}"><br /><br /><br /><br /><span style="font-size:1.5em;">Staff Code Names</span><br />staff_fire_zm<br />staff_fire_upgraded_zm<br />staff_air_zm<br />staff_air_upgraded_zm<br />staff_lightning_zm<br />staff_lightning_upgraded_zm<br />staff_water_zm<br />staff_water_upgraded_zm<br /><br />Ex. /give staff_fire<br /><br /><br /><span style="font-size:1.5em;">If you run into troubles when installing, make sure you read through all the steps and see if you missed something before commenting.</span><br /><br />------------------------------------------<br /><br />                   <span style="font-size:1.5em;"><a href="https://mega.nz/file/urx0QYhD#CUpJ_bc-r0ovLhYaaZMvrKhkAkbqRPgHklrxilVZAJ0">DOWNLOAD</a>  v1.0.1</span><br /><br />------------------------------------------<br /><br /><span style="font-size:1.5em;"><strong>Credits:</strong></span><br />AllModz<br />AndyWhelen<br />Azsry<br />BluntStuffy<br />Collie<br />DTZxPorter<br />Easyskanka<br />Erthrock<br />Frost Iceforge<br />GerardS0406<br />HarryBo21<br />HitmanVere<br />Hubashuba<br />IperBreach<br />JAMAKINBACONMAN<br />JBird632<br />JiffyNoodles<br />Lilrifa<br />MAKECENTS<br />MZSlayer<br />MadGaz<br />Magicman<br />Mathfag<br />NoobForLunch<br />PCModder<br />ProGamerzFTW<br />ProRevenge<br />Raptroes<br />RedSpace200<br />Scobalula<br />Sethnorris<br />Smasher248<br />StevieWonder87<br />Symbo<br />TheIronicTruth<br />TheSkyeLord<br />TomBMX<br />Treyarch and Activision<br />Will Luffey<br />WillJones1989<br />Yen466<br />Zeroy<br />alexbgt<br />thezombieproject</p>
+<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Pepergogo</span></span>:</strong></p>
 
----
-<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Pepergogo</span></span>:</strong>
+<p class="archive-post">Thank you soooo much for this! &#128588;</p>
+<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">brack5501</span></span>:</strong></p>
 
-<p>Thank you soooo much for this! &#128588;</p>
+<p class="archive-post">What a great job brother &#128516; I really loved seeing the progress of your work! crack !! &lt;3</p>
+<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">ProfessorWeeWoo</span></span>:</strong></p>
 
----
-<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">brack5501</span></span>:</strong>
+<p class="archive-post">awesome stuff! :cool::scream:</p>
+<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Dilly</span></span>:</strong></p>
 
-<p>What a great job brother &#128516; I really loved seeing the progress of your work! crack !! &lt;3</p>
+<p class="archive-post">Amazing work love it, cant wait to try them thanks :D</p>
+<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Dilly</span></span>:</strong></p>
 
----
-<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">ProfessorWeeWoo</span></span>:</strong>
+<p class="archive-post">File is no longer available for me?</p>
+<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Qelifern</span></span>:</strong></p>
 
-<p>awesome stuff! :cool::scream:</p>
+<p class="archive-post"><blockquote>File is no longer available for me?<br /></blockquote><br />Should be now, it got messed up for some reason...</p>
+<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">DestinyDobby</span></span>:</strong></p>
 
----
-<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Dilly</span></span>:</strong>
+<p class="archive-post">my impact fx looks like this <a href="https://gyazo.com/d4615527ed2f299aefee5b2c1ef61d96">https://gyazo.com/d4615527ed2f299aefee5b2c1ef61d96</a> i have reinstalled harry&#39;s fx pack like 3 times, but it is still just a low quality cloud of smoke, any ideas?</p>
+<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Qelifern</span></span>:</strong></p>
 
-<p>Amazing work love it, cant wait to try them thanks :D</p>
+<p class="archive-post"><blockquote>my impact fx looks like this <a href="https://gyazo.com/d4615527ed2f299aefee5b2c1ef61d96">https://gyazo.com/d4615527ed2f299aefee5b2c1ef61d96</a> i have reinstalled harry&#39;s fx pack like 3 times, but it is still just a low quality cloud of smoke, any ideas?<br /></blockquote><br />I get that aswell, I think it&#39;s to do with SSI settings in Radiant, not sure though.</p>
+<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">panzersoldat</span></span>:</strong></p>
 
----
-<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Dilly</span></span>:</strong>
+<p class="archive-post">How do I get the genesis spawner actor ?</p>
+<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Philip-p</span></span>:</strong></p>
 
-<p>File is no longer available for me?</p>
+<p class="archive-post">link for the fx arent working cant download them</p>
+<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">CaramelFudge</span></span>:</strong></p>
 
----
-<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Qelifern</span></span>:</strong>
+<p class="archive-post">link to the fx has been removed you should contact the author if you want them, don&#39;t hold your breath though,</p>
+<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">CaramelFudge</span></span>:</strong></p>
 
-<p><blockquote>File is no longer available for me?<br /></blockquote><br />Should be now, it got messed up for some reason...</p>
+<p class="archive-post">this conflicts with the apothicon servant // id say the anims are to blame  <br /><br />and the well known soul box&#39;s //<br /><br />side note the pillar is missing textures/camos <br />as well as the crystal that too shows up as the defualt test texture<br /><br />worth a look into but regardless great work,.. if ya get bored id love to see the thunder fists up in here.</p>
+<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Harry Bo21</span></span>:</strong></p>
 
----
-<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">DestinyDobby</span></span>:</strong>
+<p class="archive-post"><blockquote>this conflicts with the apothicon servant // id say the anims are to blame <br /><br />and the well known soul box&#39;s //<br /><br />side note the pillar is missing textures/camos<br />as well as the crystal that too shows up as the defualt test texture<br /><br />worth a look into but regardless great work,.. if ya get bored id love to see the thunder fists up in here.<br /></blockquote><br />Considering those were issues with my last release - it’s pretty obv what’s gone on here...</p>
+<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">CaramelFudge</span></span>:</strong></p>
 
-<p>my impact fx looks like this <a href="https://gyazo.com/d4615527ed2f299aefee5b2c1ef61d96">https://gyazo.com/d4615527ed2f299aefee5b2c1ef61d96</a> i have reinstalled harry&#39;s fx pack like 3 times, but it is still just a low quality cloud of smoke, any ideas?</p>
+<p class="archive-post">Well me fixed it, i did, sir yes i did.</p>
+<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">CaramelFudge</span></span>:</strong></p>
 
----
-<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Qelifern</span></span>:</strong>
+<p class="archive-post">Also harry it soumds like your accusing this guy of publishing your work? Be specific please dude this is how 9/11 became a inside job haha</p>
+<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Harry Bo21</span></span>:</strong></p>
 
-<p><blockquote>my impact fx looks like this <a href="https://gyazo.com/d4615527ed2f299aefee5b2c1ef61d96">https://gyazo.com/d4615527ed2f299aefee5b2c1ef61d96</a> i have reinstalled harry&#39;s fx pack like 3 times, but it is still just a low quality cloud of smoke, any ideas?<br /></blockquote><br />I get that aswell, I think it&#39;s to do with SSI settings in Radiant, not sure though.</p>
+<p class="archive-post">No but having the same asset issues means it obv is just the assets from my pack<br /><br />haven’t looked at the rest<br /><br />can’t really “steal” ported assets</p>
+<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">CaramelFudge</span></span>:</strong></p>
 
----
-<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">panzersoldat</span></span>:</strong>
+<p class="archive-post"><blockquote>No but having the same asset issues means it obv is just the assets from my pack<br /><br />haven’t looked at the rest<br /><br />can’t really “steal” ported assets<br /></blockquote><br /><br />I bet he just copy pasted that asset pack like a bitch, haha jk nah either way good to see some quality stuff up here again wish i could contribute but sadly all the good stuff been taken down,  HydraX for one I only recently found out about,.. makes me sad :/ hahaha</p>
+<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">TheGobMob</span></span>:</strong></p>
 
-<p>How do I get the genesis spawner actor ?</p>
+<p class="archive-post">I keep getting this error can someone help<br /><br /><br /><br /><br />&quot;D:\SteamLibrary\steamapps\common\Call of Duty Black Ops III\sound\snd_convert.exe&quot;  pc usermaps\zm_eliguy_house usermaps\zm_eliguy_house zone_source usermaps\zm_eliguy_house english zm_eliguy_house<br /><br />ERROR: D:\SteamLibrary\steamapps\common\Call of Duty Black Ops III\share\raw\sound\aliases\staves_aliases.csv<br /><br />ERROR: staves_aliases.csv missing template alias &#39;GRP_WPN&#39; for alias wpn_airstaff_tornado<br /><br />ERROR: staves_aliases.csv missing template alias &#39;GRP_WPN&#39; for alias wpn_imp_lightningstaff<br /><br />ERROR: staves_aliases.csv missing template alias &#39;GRP_WPN&#39; for alias lightning_ball<br /><br />ERROR: staves_aliases.csv missing template alias &#39;GRP_WPN&#39; for alias shock_effect<br /><br />ERROR: staves_aliases.csv missing template alias &#39;GRP_WPN&#39; for alias wpn_waterstaff_freeze_zombie<br /><br />ERROR: staves_aliases.csv missing template alias &#39;GRP_WPN&#39; for alias wpn_waterstaff_storm<br /><br />ERROR: staves_aliases.csv missing template alias &#39;GRP_WPN&#39; for alias wpn_waterstaff_storm_imp<br /><br /><br /><br />ERROR: d:\steamlibrary\steamapps\common\call of duty black ops iii\share\raw\sound\aliases\staves_aliases.csv<br /><br />ERROR: &#39;wpn_airstaff_tornado&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;VolumeGroup&#39;. Value &#39;VolumeGroup&#39; is not valid. wpn_airstaff_tornado had empty field VolumeGroup.<br /><br />ERROR: &#39;wpn_imp_lightningstaff&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;VolumeGroup&#39;. Value &#39;VolumeGroup&#39; is not valid. wpn_imp_lightningstaff had empty field VolumeGroup.<br /><br />ERROR: &#39;wpn_airstaff_tornado&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. wpn_airstaff_tornado had empty field DuckGroup.<br /><br />ERROR: &#39;wpn_imp_lightningstaff&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. wpn_imp_lightningstaff had empty field DuckGroup.<br /><br />ERROR: &#39;lightning_ball&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;VolumeGroup&#39;. Value &#39;VolumeGroup&#39; is not valid. lightning_ball had empty field VolumeGroup.<br /><br />ERROR: &#39;lightning_ball&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. lightning_ball had empty field DuckGroup.<br /><br />ERROR: &#39;shock_effect&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;VolumeGroup&#39;. Value &#39;VolumeGroup&#39; is not valid. shock_effect had empty field VolumeGroup.<br /><br />ERROR: &#39;shock_effect&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. shock_effect had empty field DuckGroup.<br /><br />ERROR: &#39;wpn_waterstaff_freeze_zombie&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;VolumeGroup&#39;. Value &#39;VolumeGroup&#39; is not valid. wpn_waterstaff_freeze_zombie had empty field VolumeGroup.<br /><br />ERROR: &#39;wpn_waterstaff_freeze_zombie&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. wpn_waterstaff_freeze_zombie had empty field DuckGroup.<br /><br />ERROR: &#39;wpn_waterstaff_storm&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;VolumeGroup&#39;. Value &#39;VolumeGroup&#39; is not valid. wpn_waterstaff_storm had empty field VolumeGroup.<br /><br />ERROR: &#39;wpn_waterstaff_storm&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. wpn_waterstaff_storm had empty field DuckGroup.<br /><br />ERROR: &#39;wpn_waterstaff_storm_imp&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;VolumeGroup&#39;. Value &#39;VolumeGroup&#39; is not valid. wpn_waterstaff_storm_imp had empty field VolumeGroup.<br /><br />ERROR: &#39;wpn_waterstaff_storm_imp&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. wpn_waterstaff_storm_imp had empty field DuckGroup.</p>
+<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">CaramelFudge</span></span>:</strong></p>
 
----
-<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Philip-p</span></span>:</strong>
-
-<p>link for the fx arent working cant download them</p>
-
----
-<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">CaramelFudge</span></span>:</strong>
-
-<p>link to the fx has been removed you should contact the author if you want them, don&#39;t hold your breath though,</p>
-
----
-<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">CaramelFudge</span></span>:</strong>
-
-<p>this conflicts with the apothicon servant // id say the anims are to blame  <br /><br />and the well known soul box&#39;s //<br /><br />side note the pillar is missing textures/camos <br />as well as the crystal that too shows up as the defualt test texture<br /><br />worth a look into but regardless great work,.. if ya get bored id love to see the thunder fists up in here.</p>
-
----
-<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Harry Bo21</span></span>:</strong>
-
-<p><blockquote>this conflicts with the apothicon servant // id say the anims are to blame <br /><br />and the well known soul box&#39;s //<br /><br />side note the pillar is missing textures/camos<br />as well as the crystal that too shows up as the defualt test texture<br /><br />worth a look into but regardless great work,.. if ya get bored id love to see the thunder fists up in here.<br /></blockquote><br />Considering those were issues with my last release - it’s pretty obv what’s gone on here...</p>
-
----
-<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">CaramelFudge</span></span>:</strong>
-
-<p>Well me fixed it, i did, sir yes i did.</p>
-
----
-<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">CaramelFudge</span></span>:</strong>
-
-<p>Also harry it soumds like your accusing this guy of publishing your work? Be specific please dude this is how 9/11 became a inside job haha</p>
-
----
-<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Harry Bo21</span></span>:</strong>
-
-<p>No but having the same asset issues means it obv is just the assets from my pack<br /><br />haven’t looked at the rest<br /><br />can’t really “steal” ported assets</p>
-
----
-<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">CaramelFudge</span></span>:</strong>
-
-<p><blockquote>No but having the same asset issues means it obv is just the assets from my pack<br /><br />haven’t looked at the rest<br /><br />can’t really “steal” ported assets<br /></blockquote><br /><br />I bet he just copy pasted that asset pack like a bitch, haha jk nah either way good to see some quality stuff up here again wish i could contribute but sadly all the good stuff been taken down,  HydraX for one I only recently found out about,.. makes me sad :/ hahaha</p>
-
----
-<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">TheGobMob</span></span>:</strong>
-
-<p>I keep getting this error can someone help<br /><br /><br /><br /><br />&quot;D:\SteamLibrary\steamapps\common\Call of Duty Black Ops III\sound\snd_convert.exe&quot;  pc usermaps\zm_eliguy_house usermaps\zm_eliguy_house zone_source usermaps\zm_eliguy_house english zm_eliguy_house<br /><br />ERROR: D:\SteamLibrary\steamapps\common\Call of Duty Black Ops III\share\raw\sound\aliases\staves_aliases.csv<br /><br />ERROR: staves_aliases.csv missing template alias &#39;GRP_WPN&#39; for alias wpn_airstaff_tornado<br /><br />ERROR: staves_aliases.csv missing template alias &#39;GRP_WPN&#39; for alias wpn_imp_lightningstaff<br /><br />ERROR: staves_aliases.csv missing template alias &#39;GRP_WPN&#39; for alias lightning_ball<br /><br />ERROR: staves_aliases.csv missing template alias &#39;GRP_WPN&#39; for alias shock_effect<br /><br />ERROR: staves_aliases.csv missing template alias &#39;GRP_WPN&#39; for alias wpn_waterstaff_freeze_zombie<br /><br />ERROR: staves_aliases.csv missing template alias &#39;GRP_WPN&#39; for alias wpn_waterstaff_storm<br /><br />ERROR: staves_aliases.csv missing template alias &#39;GRP_WPN&#39; for alias wpn_waterstaff_storm_imp<br /><br /><br /><br />ERROR: d:\steamlibrary\steamapps\common\call of duty black ops iii\share\raw\sound\aliases\staves_aliases.csv<br /><br />ERROR: &#39;wpn_airstaff_tornado&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;VolumeGroup&#39;. Value &#39;VolumeGroup&#39; is not valid. wpn_airstaff_tornado had empty field VolumeGroup.<br /><br />ERROR: &#39;wpn_imp_lightningstaff&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;VolumeGroup&#39;. Value &#39;VolumeGroup&#39; is not valid. wpn_imp_lightningstaff had empty field VolumeGroup.<br /><br />ERROR: &#39;wpn_airstaff_tornado&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. wpn_airstaff_tornado had empty field DuckGroup.<br /><br />ERROR: &#39;wpn_imp_lightningstaff&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. wpn_imp_lightningstaff had empty field DuckGroup.<br /><br />ERROR: &#39;lightning_ball&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;VolumeGroup&#39;. Value &#39;VolumeGroup&#39; is not valid. lightning_ball had empty field VolumeGroup.<br /><br />ERROR: &#39;lightning_ball&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. lightning_ball had empty field DuckGroup.<br /><br />ERROR: &#39;shock_effect&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;VolumeGroup&#39;. Value &#39;VolumeGroup&#39; is not valid. shock_effect had empty field VolumeGroup.<br /><br />ERROR: &#39;shock_effect&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. shock_effect had empty field DuckGroup.<br /><br />ERROR: &#39;wpn_waterstaff_freeze_zombie&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;VolumeGroup&#39;. Value &#39;VolumeGroup&#39; is not valid. wpn_waterstaff_freeze_zombie had empty field VolumeGroup.<br /><br />ERROR: &#39;wpn_waterstaff_freeze_zombie&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. wpn_waterstaff_freeze_zombie had empty field DuckGroup.<br /><br />ERROR: &#39;wpn_waterstaff_storm&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;VolumeGroup&#39;. Value &#39;VolumeGroup&#39; is not valid. wpn_waterstaff_storm had empty field VolumeGroup.<br /><br />ERROR: &#39;wpn_waterstaff_storm&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. wpn_waterstaff_storm had empty field DuckGroup.<br /><br />ERROR: &#39;wpn_waterstaff_storm_imp&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;VolumeGroup&#39;. Value &#39;VolumeGroup&#39; is not valid. wpn_waterstaff_storm_imp had empty field VolumeGroup.<br /><br />ERROR: &#39;wpn_waterstaff_storm_imp&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. wpn_waterstaff_storm_imp had empty field DuckGroup.</p>
-
----
-<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">CaramelFudge</span></span>:</strong>
-
-<p>Dis error occurs becuase  the alias is set up wrong in my experience <br /><br />If you go to your sound  aliases  in the csv mentioned you&#39;ll probably find <br /># &lt;------ that at the top. Remove it</p>
+<p class="archive-post">Dis error occurs becuase  the alias is set up wrong in my experience <br /><br />If you go to your sound  aliases  in the csv mentioned you&#39;ll probably find <br /># &lt;------ that at the top. Remove it</p>
