--- a/wiki/threads/3831.md
+++ b/wiki/threads/3831.md
@@ -2,9 +2,9 @@
 Game Asset Reversing | Releases
 
 ---
-<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Debino</span></span>:</strong>
+<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Debino</span></span>:</strong></p>
 
-<p>
+<p class="archive-post">
 This simple zombies template is for the newer people starting in the mod tools.<br />L3AK Mod is needed for this template to work (<a href="https://wiki.modme.co/wiki/black_ops_3/lua_(lui)/Installation.html">L3AKMOD</a>)<br />if there are any issues or bugs please report them ASAP<br /><iframe type="text/html" width="640" height="360" src="https://www.youtube.com/embed/dMnuErsUtAw" frameborder="0"></iframe><br />
 -LUA HUD (default factory HUD)<br />-Perk sounds fix<br />-Player voices (voxes) added<br />-Mystery Boxes<br />-Dogs added/ fix (option to disable/ enable dogs)<br />-Changeable PaP Camo<br />-Changeable Starting weapon<br />-Changeable Player health<br />-Changeable Death machine<br />-Changeable Perk limit<br />-Changeable Starting points<br />-Changeable Zombie speed/ Health<br />-Dev commands<br />-Perk shaders<br />-Powerlag fix (no lag when power is turned on)<br />-Bo4 max ammo<br />
 <br />
@@ -13,12 +13,10 @@ This simple zombies template is for the newer people starting in the mod tools.<
 <a href="https://mega.nz/file/jEETQKAa#DFKzJ6PXXXUKmFllOI0CQlTvVhZQ1g7y_aoUc2WckCE">DOWNLOAD v1.3</a><br />
 <br /><br /><strong>CREDITS:</strong><br />-Debino -- Making the template (no need to give me credit)<br />-HarryBo21 -- Perk Sounds, Mystery Boxes, Player Vox, etc<br />-Devraw Team -- Dog Prefab, Enable/ Disable Dogs, Pap Camo, Starting Weapon, Powerlag Fix, etc<br />-RudySPG -- Perk Lights<br />-Humphrey -- Perk Shaders<br />-Crazydude55 -- Player Health<br />-Sphynx&#39;s -- Console Commands<br />
 <br />
-<img style="max-width: 500px;" src="{{ '/wiki/threads/assets/1275.png' | relative_url }}"><br /><a href="https://mega.nz/file/3U0hjaKS#AuQOOe9ntEAWFHjvkzZUWfAX-8AjCVycB99wteI_lQE">Bubbly Download</a><br />
+<img style="max-width: 500px;" src="{{ '/wiki/threads/assets/a.1275.png' | relative_url }}"><br /><a href="https://mega.nz/file/3U0hjaKS#AuQOOe9ntEAWFHjvkzZUWfAX-8AjCVycB99wteI_lQE">Bubbly Download</a><br />
 <br />
-<img style="max-width: 500px;" src="{{ '/wiki/threads/assets/1276.png' | relative_url }}"><br /><a href="https://mega.nz/file/XRkWzTSI#OcvEJOR7SWPp9PtOjyD6YXxv9u2X5trOw5_CTe6ZoBo">Blutig Download</a><br />
+<img style="max-width: 500px;" src="{{ '/wiki/threads/assets/a.1276.png' | relative_url }}"><br /><a href="https://mega.nz/file/XRkWzTSI#OcvEJOR7SWPp9PtOjyD6YXxv9u2X5trOw5_CTe6ZoBo">Blutig Download</a><br />
 </p>
+<p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Debino</span></span>:</strong></p>
 
----
-<strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Debino</span></span>:</strong>
-
-<p>-Added Blutig and Bubbly perk shader (11/18/2021)</p>
+<p class="archive-post">-Added Blutig and Bubbly perk shader (11/18/2021)</p>
