blockquote broke with formatting

--- a/wiki/threads/3320.md
+++ b/wiki/threads/3320.md
@@ -22,13 +22,13 @@ Game Asset Reversing | Releases
 <p class="archive-post">File is no longer available for me?</p>
 <p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Qelifern</span></span>:</strong></p>
 
-<p class="archive-post"><blockquote>File is no longer available for me?<br /></blockquote><br />Should be now, it got messed up for some reason...</p>
+<p class="archive-post"><div class="blockquote">File is no longer available for me?<br /></div><br />Should be now, it got messed up for some reason...</p>
 <p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">DestinyDobby</span></span>:</strong></p>
 
 <p class="archive-post">my impact fx looks like this <a href="https://gyazo.com/d4615527ed2f299aefee5b2c1ef61d96">https://gyazo.com/d4615527ed2f299aefee5b2c1ef61d96</a> i have reinstalled harry&#39;s fx pack like 3 times, but it is still just a low quality cloud of smoke, any ideas?</p>
 <p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Qelifern</span></span>:</strong></p>
 
-<p class="archive-post"><blockquote>my impact fx looks like this <a href="https://gyazo.com/d4615527ed2f299aefee5b2c1ef61d96">https://gyazo.com/d4615527ed2f299aefee5b2c1ef61d96</a> i have reinstalled harry&#39;s fx pack like 3 times, but it is still just a low quality cloud of smoke, any ideas?<br /></blockquote><br />I get that aswell, I think it&#39;s to do with SSI settings in Radiant, not sure though.</p>
+<p class="archive-post"><div class="blockquote">my impact fx looks like this <a href="https://gyazo.com/d4615527ed2f299aefee5b2c1ef61d96">https://gyazo.com/d4615527ed2f299aefee5b2c1ef61d96</a> i have reinstalled harry&#39;s fx pack like 3 times, but it is still just a low quality cloud of smoke, any ideas?<br /></div><br />I get that aswell, I think it&#39;s to do with SSI settings in Radiant, not sure though.</p>
 <p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">panzersoldat</span></span>:</strong></p>
 
 <p class="archive-post">How do I get the genesis spawner actor ?</p>
@@ -43,7 +43,7 @@ Game Asset Reversing | Releases
 <p class="archive-post">this conflicts with the apothicon servant // id say the anims are to blame  <br /><br />and the well known soul box&#39;s //<br /><br />side note the pillar is missing textures/camos <br />as well as the crystal that too shows up as the defualt test texture<br /><br />worth a look into but regardless great work,.. if ya get bored id love to see the thunder fists up in here.</p>
 <p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Harry Bo21</span></span>:</strong></p>
 
-<p class="archive-post"><blockquote>this conflicts with the apothicon servant // id say the anims are to blame <br /><br />and the well known soul box&#39;s //<br /><br />side note the pillar is missing textures/camos<br />as well as the crystal that too shows up as the defualt test texture<br /><br />worth a look into but regardless great work,.. if ya get bored id love to see the thunder fists up in here.<br /></blockquote><br />Considering those were issues with my last release - it’s pretty obv what’s gone on here...</p>
+<p class="archive-post"><div class="blockquote">this conflicts with the apothicon servant // id say the anims are to blame <br /><br />and the well known soul box&#39;s //<br /><br />side note the pillar is missing textures/camos<br />as well as the crystal that too shows up as the defualt test texture<br /><br />worth a look into but regardless great work,.. if ya get bored id love to see the thunder fists up in here.<br /></div><br />Considering those were issues with my last release - it’s pretty obv what’s gone on here...</p>
 <p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">CaramelFudge</span></span>:</strong></p>
 
 <p class="archive-post">Well me fixed it, i did, sir yes i did.</p>
@@ -55,7 +55,7 @@ Game Asset Reversing | Releases
 <p class="archive-post">No but having the same asset issues means it obv is just the assets from my pack<br /><br />haven’t looked at the rest<br /><br />can’t really “steal” ported assets</p>
 <p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">CaramelFudge</span></span>:</strong></p>
 
-<p class="archive-post"><blockquote>No but having the same asset issues means it obv is just the assets from my pack<br /><br />haven’t looked at the rest<br /><br />can’t really “steal” ported assets<br /></blockquote><br /><br />I bet he just copy pasted that asset pack like a bitch, haha jk nah either way good to see some quality stuff up here again wish i could contribute but sadly all the good stuff been taken down,  HydraX for one I only recently found out about,.. makes me sad :/ hahaha</p>
+<p class="archive-post"><div class="blockquote">No but having the same asset issues means it obv is just the assets from my pack<br /><br />haven’t looked at the rest<br /><br />can’t really “steal” ported assets<br /></div><br /><br />I bet he just copy pasted that asset pack like a bitch, haha jk nah either way good to see some quality stuff up here again wish i could contribute but sadly all the good stuff been taken down,  HydraX for one I only recently found out about,.. makes me sad :/ hahaha</p>
 <p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">TheGobMob</span></span>:</strong></p>
 
 <p class="archive-post">I keep getting this error can someone help<br /><br /><br /><br /><br />&quot;D:\SteamLibrary\steamapps\common\Call of Duty Black Ops III\sound\snd_convert.exe&quot;  pc usermaps\zm_eliguy_house usermaps\zm_eliguy_house zone_source usermaps\zm_eliguy_house english zm_eliguy_house<br /><br />ERROR: D:\SteamLibrary\steamapps\common\Call of Duty Black Ops III\share\raw\sound\aliases\staves_aliases.csv<br /><br />ERROR: staves_aliases.csv missing template alias &#39;GRP_WPN&#39; for alias wpn_airstaff_tornado<br /><br />ERROR: staves_aliases.csv missing template alias &#39;GRP_WPN&#39; for alias wpn_imp_lightningstaff<br /><br />ERROR: staves_aliases.csv missing template alias &#39;GRP_WPN&#39; for alias lightning_ball<br /><br />ERROR: staves_aliases.csv missing template alias &#39;GRP_WPN&#39; for alias shock_effect<br /><br />ERROR: staves_aliases.csv missing template alias &#39;GRP_WPN&#39; for alias wpn_waterstaff_freeze_zombie<br /><br />ERROR: staves_aliases.csv missing template alias &#39;GRP_WPN&#39; for alias wpn_waterstaff_storm<br /><br />ERROR: staves_aliases.csv missing template alias &#39;GRP_WPN&#39; for alias wpn_waterstaff_storm_imp<br /><br /><br /><br />ERROR: d:\steamlibrary\steamapps\common\call of duty black ops iii\share\raw\sound\aliases\staves_aliases.csv<br /><br />ERROR: &#39;wpn_airstaff_tornado&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;VolumeGroup&#39;. Value &#39;VolumeGroup&#39; is not valid. wpn_airstaff_tornado had empty field VolumeGroup.<br /><br />ERROR: &#39;wpn_imp_lightningstaff&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;VolumeGroup&#39;. Value &#39;VolumeGroup&#39; is not valid. wpn_imp_lightningstaff had empty field VolumeGroup.<br /><br />ERROR: &#39;wpn_airstaff_tornado&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. wpn_airstaff_tornado had empty field DuckGroup.<br /><br />ERROR: &#39;wpn_imp_lightningstaff&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. wpn_imp_lightningstaff had empty field DuckGroup.<br /><br />ERROR: &#39;lightning_ball&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;VolumeGroup&#39;. Value &#39;VolumeGroup&#39; is not valid. lightning_ball had empty field VolumeGroup.<br /><br />ERROR: &#39;lightning_ball&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. lightning_ball had empty field DuckGroup.<br /><br />ERROR: &#39;shock_effect&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;VolumeGroup&#39;. Value &#39;VolumeGroup&#39; is not valid. shock_effect had empty field VolumeGroup.<br /><br />ERROR: &#39;shock_effect&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. shock_effect had empty field DuckGroup.<br /><br />ERROR: &#39;wpn_waterstaff_freeze_zombie&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;VolumeGroup&#39;. Value &#39;VolumeGroup&#39; is not valid. wpn_waterstaff_freeze_zombie had empty field VolumeGroup.<br /><br />ERROR: &#39;wpn_waterstaff_freeze_zombie&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. wpn_waterstaff_freeze_zombie had empty field DuckGroup.<br /><br />ERROR: &#39;wpn_waterstaff_storm&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;VolumeGroup&#39;. Value &#39;VolumeGroup&#39; is not valid. wpn_waterstaff_storm had empty field VolumeGroup.<br /><br />ERROR: &#39;wpn_waterstaff_storm&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. wpn_waterstaff_storm had empty field DuckGroup.<br /><br />ERROR: &#39;wpn_waterstaff_storm_imp&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;VolumeGroup&#39;. Value &#39;VolumeGroup&#39; is not valid. wpn_waterstaff_storm_imp had empty field VolumeGroup.<br /><br />ERROR: &#39;wpn_waterstaff_storm_imp&#39; Line Number: 0<br /><br />ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. wpn_waterstaff_storm_imp had empty field DuckGroup.</p>
