--- a/wiki/threads/3834.md
+++ b/wiki/threads/3834.md
@@ -10,4 +10,4 @@ Game Modding | Call of Duty: Black Ops 3 | Radiant
 <p class="archive-post">bus or clip DisconnectPaths([detailLevel],[moveAllowed]);<br />after you kick your players off</p>
 <p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">blink-420</span></span>:</strong></p>
 
-<p class="archive-post"><blockquote>bus or clip DisconnectPaths([detailLevel],[moveAllowed]);<br />after you kick your players off<br /></blockquote><br />Works beautifully, thank you for coming in clutch all the time. &lt;3</p>
+<p class="archive-post"><div class="blockquote">bus or clip DisconnectPaths([detailLevel],[moveAllowed]);<br />after you kick your players off<br /></div><br />Works beautifully, thank you for coming in clutch all the time. &lt;3</p>
