--- a/wiki/threads/3627.md
+++ b/wiki/threads/3627.md
@@ -10,13 +10,13 @@ Game Modding | Call of Duty: Black Ops 3 | Models & Animation
 <p class="archive-post"><a href="https://p3dm.ru/xfsearch/for_game/Call+of+Duty%3A+Infinite+Warfare+Zombies/">https://p3dm.ru/xfsearch/for_game/Call+of+Duty%3A+Infinite+Warfare+Zombies/</a></p>
 <p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Bocy</span></span>:</strong></p>
 
-<p class="archive-post"><blockquote><a href="https://p3dm.ru/xfsearch/for_game/Call+of+Duty%3A+Infinite+Warfare+Zombies/">https://p3dm.ru/xfsearch/for_game/Call+of+Duty%3A+Infinite+Warfare+Zombies/</a><br /></blockquote><br />Thanks for this :] is very useful, but I need the entire map</p>
+<p class="archive-post"><div class="blockquote"><a href="https://p3dm.ru/xfsearch/for_game/Call+of+Duty%3A+Infinite+Warfare+Zombies/">https://p3dm.ru/xfsearch/for_game/Call+of+Duty%3A+Infinite+Warfare+Zombies/</a><br /></div><br />Thanks for this :] is very useful, but I need the entire map</p>
 <p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">kikail</span></span>:</strong></p>
 
-<p class="archive-post"><blockquote>Thanks for this :] is very useful, but I need the entire map<br /></blockquote><br />U can just use Husky of you have the game</p>
+<p class="archive-post"><div class="blockquote">Thanks for this :] is very useful, but I need the entire map<br /></div><br />U can just use Husky of you have the game</p>
 <p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Bocy</span></span>:</strong></p>
 
-<p class="archive-post"><blockquote>U can just use Husky of you have the game<br /></blockquote><br />Hi, I know Husky, but unfortunately I don&#39;t own the game on PC but only on PS4 :] Thanks!</p>
+<p class="archive-post"><div class="blockquote">U can just use Husky of you have the game<br /></div><br />Hi, I know Husky, but unfortunately I don&#39;t own the game on PC but only on PS4 :] Thanks!</p>
 <p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Fanatic</span></span>:</strong></p>
 
 <p class="archive-post">Pretty late, but here it is if you still need it: <a href="https://mega.nz/file/5wFBFIwJ#s9wEXJ26XoE6ak7HnGkd0_bNALAQ42edh0G1gGZ8EX0">download</a></p>
