--- a/wiki/threads/3837.md
+++ b/wiki/threads/3837.md
@@ -13,28 +13,28 @@ News and Information | Announcements
 <p class="archive-post">Its been a good ride will see you all in the discord server (y)</p>
 <p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Bruhman</span></span>:</strong></p>
 
-<p class="archive-post"><blockquote>noooooooooooooooooooooooooooooooooooooooo<br /></blockquote><br />that seems very genuine spiki LMAO maybe this means a decrease in over used assets in box maps???</p>
+<p class="archive-post"><div class="blockquote">noooooooooooooooooooooooooooooooooooooooo<br /></div><br />that seems very genuine spiki LMAO maybe this means a decrease in over used assets in box maps???</p>
 <p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Harry Bo21</span></span>:</strong></p>
 
-<p class="archive-post"><blockquote>that seems very genuine spiki LMAO maybe this means a decrease in over used assets in box maps???<br /></blockquote><br />What assets</p>
+<p class="archive-post"><div class="blockquote">that seems very genuine spiki LMAO maybe this means a decrease in over used assets in box maps???<br /></div><br />What assets</p>
 <p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Spiki</span></span>:</strong></p>
 
-<p class="archive-post"><blockquote>that seems very genuine spiki LMAO maybe this means a decrease in over used assets in box maps???<br /></blockquote><br />Don’t worry. Imma reopen t7mods.com whenever kyle gets around to it</p>
+<p class="archive-post"><div class="blockquote">that seems very genuine spiki LMAO maybe this means a decrease in over used assets in box maps???<br /></div><br />Don’t worry. Imma reopen t7mods.com whenever kyle gets around to it</p>
 <p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Harry Bo21</span></span>:</strong></p>
 
-<p class="archive-post"><blockquote>Don’t worry. Imma reopen t7mods.com whenever kyle gets around to it<br /></blockquote><br />Lmao do not hold your breathe you could literally die waiting for him to do anything no matter how small</p>
+<p class="archive-post"><div class="blockquote">Don’t worry. Imma reopen t7mods.com whenever kyle gets around to it<br /></div><br />Lmao do not hold your breathe you could literally die waiting for him to do anything no matter how small</p>
 <p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Spiki</span></span>:</strong></p>
 
-<p class="archive-post"><blockquote>Lmao do not hold your breathe you could literally die waiting for him to do anything no matter how small<br /></blockquote><br />Ya some of us have things to do during the day and sometimes night</p>
+<p class="archive-post"><div class="blockquote">Lmao do not hold your breathe you could literally die waiting for him to do anything no matter how small<br /></div><br />Ya some of us have things to do during the day and sometimes night</p>
 <p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Bruhman</span></span>:</strong></p>
 
-<p class="archive-post"><blockquote>Don’t worry. Imma reopen t7mods.com whenever kyle gets around to it<br /></blockquote><br />t7mods was formatted so nicely.... shame some 30 yr old piece of shit had to ruin it!</p>
+<p class="archive-post"><div class="blockquote">Don’t worry. Imma reopen t7mods.com whenever kyle gets around to it<br /></div><br />t7mods was formatted so nicely.... shame some 30 yr old piece of shit had to ruin it!</p>
 <p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Bruhman</span></span>:</strong></p>
 
-<p class="archive-post"><blockquote>Lmao do not hold your breathe you could literally die waiting for him to do anything no matter how small<br /></blockquote><br /> hey bro appreciate your help on qeliferns staffs. anyways please stfu :D</p>
+<p class="archive-post"><div class="blockquote">Lmao do not hold your breathe you could literally die waiting for him to do anything no matter how small<br /></div><br /> hey bro appreciate your help on qeliferns staffs. anyways please stfu :D</p>
 <p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Spiki</span></span>:</strong></p>
 
-<p class="archive-post"><blockquote>t7mods was formatted so nicely.... shame some 30 yr old piece of shit had to ruin it!<br /></blockquote><br />you dont need to bully the man</p>
+<p class="archive-post"><div class="blockquote">t7mods was formatted so nicely.... shame some 30 yr old piece of shit had to ruin it!<br /></div><br />you dont need to bully the man</p>
 <p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Harry Bo21</span></span>:</strong></p>
 
-<p class="archive-post"><blockquote>t7mods was formatted so nicely.... shame some 30 yr old piece of shit had to ruin it!<br /></blockquote><br />Yea his name was Kyle<br /><br />And all the content was mine so thanks for the compliment :)</p>
+<p class="archive-post"><div class="blockquote">t7mods was formatted so nicely.... shame some 30 yr old piece of shit had to ruin it!<br /></div><br />Yea his name was Kyle<br /><br />And all the content was mine so thanks for the compliment :)</p>
