--- a/wiki/threads/3841.md
+++ b/wiki/threads/3841.md
@@ -10,4 +10,4 @@ Game Modding | Call of Duty: Black Ops 3 | Models & Animation
 <p class="archive-post"><iframe type="text/html" width="640" height="360" src="https://www.youtube.com/embed/XoSGVRUTkA0" frameborder="0"></iframe><br /><br /><iframe type="text/html" width="640" height="360" src="https://www.youtube.com/embed/c_JN-jJW7tI" frameborder="0"></iframe></p>
 <p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Fanatic</span></span>:</strong></p>
 
-<p class="archive-post"><blockquote><iframe type="text/html" width="640" height="360" src="https://www.youtube.com/embed/XoSGVRUTkA0" frameborder="0"></iframe><br /><br /><iframe type="text/html" width="640" height="360" src="https://www.youtube.com/embed/c_JN-jJW7tI" frameborder="0"></iframe><br /></blockquote><br />That&#39;s the vid I followed at first, and tried the tag_origin fix and didn&#39;t seem to work.<br /><br />Although, if it fully plays in APE with no issues, would it be a problem with MAYA?</p>
+<p class="archive-post"><div class="blockquote"><iframe type="text/html" width="640" height="360" src="https://www.youtube.com/embed/XoSGVRUTkA0" frameborder="0"></iframe><br /><br /><iframe type="text/html" width="640" height="360" src="https://www.youtube.com/embed/c_JN-jJW7tI" frameborder="0"></iframe><br /></div><br />That&#39;s the vid I followed at first, and tried the tag_origin fix and didn&#39;t seem to work.<br /><br />Although, if it fully plays in APE with no issues, would it be a problem with MAYA?</p>
