--- a/wiki/threads/3846.md
+++ b/wiki/threads/3846.md
@@ -10,4 +10,4 @@ Game Modding | Call of Duty: Black Ops 3 | Asset Importing
 <p class="archive-post">the problem is <br />they both use the same specialty names <br /><br />&quot;from banana colada GSH file&quot; <br />#define PERK_BANANA_COLADA         &quot;specialty_immunecounteruav&quot;<br /><br />&quot;From icu gsh&quot;<br /><br />#define LOGICAL_PERK_ICU                  &quot;specialty_immunecounteruav&quot;</p>
 <p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">THAN0S</span></span>:</strong></p>
 
-<p class="archive-post"><blockquote>the problem is<br />they both use the same specialty names<br /><br />&quot;from banana colada GSH file&quot;<br />#define PERK_BANANA_COLADA         &quot;specialty_immunecounteruav&quot;<br /><br />&quot;From icu gsh&quot;<br /><br />#define LOGICAL_PERK_ICU                  &quot;specialty_immunecounteruav&quot;<br /></blockquote><br /><br />ok thank you now how exactly do I change that properly<br />Edit: (FIXED IT W)<br />[ATTACH alt=&quot;unknown (6).png&quot;]1281[/ATTACH]</p>
+<p class="archive-post"><div class="blockquote">the problem is<br />they both use the same specialty names<br /><br />&quot;from banana colada GSH file&quot;<br />#define PERK_BANANA_COLADA         &quot;specialty_immunecounteruav&quot;<br /><br />&quot;From icu gsh&quot;<br /><br />#define LOGICAL_PERK_ICU                  &quot;specialty_immunecounteruav&quot;<br /></div><br /><br />ok thank you now how exactly do I change that properly<br />Edit: (FIXED IT W)<br />[ATTACH alt=&quot;unknown (6).png&quot;]1281[/ATTACH]</p>
