--- a/wiki/threads/3847.md
+++ b/wiki/threads/3847.md
@@ -10,4 +10,4 @@ Game Modding | Call of Duty: Black Ops 3 | Models & Animation
 <p class="archive-post"><a href="https://github.com/ardivee/Radler/releases/tag/v0.2">https://github.com/ardivee/Radler/releases/tag/v0.2</a></p>
 <p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Fanatic</span></span>:</strong></p>
 
-<p class="archive-post"><blockquote><a href="https://github.com/ardivee/Radler/releases/tag/v0.2">https://github.com/ardivee/Radler/releases/tag/v0.2</a><br /></blockquote><br />thanks :)</p>
+<p class="archive-post"><div class="blockquote"><a href="https://github.com/ardivee/Radler/releases/tag/v0.2">https://github.com/ardivee/Radler/releases/tag/v0.2</a><br /></div><br />thanks :)</p>
