--- a/wiki/threads/3849.md
+++ b/wiki/threads/3849.md
@@ -26,8 +26,8 @@ UNRECOVERABLE ERROR:
 <br />I have the same error, how you solved?</p>
 <p class="archive-user"><strong style="font-size: 1.4em;"><span style="text-decoration: underline;text-decoration-color: #34a7f9;"><span style="color:#34a7f9;">Harry Bo21</span></span>:</strong></p>
 
-<p class="archive-post"><blockquote>You solved this error?<br /><br />{% highlight php %}
+<p class="archive-post"><div class="blockquote">You solved this error?<br /><br />{% highlight php %}
 UNRECOVERABLE ERROR:
 
 ^1ERROR: Some textures are the wrong type for creating fx combo texture used in the compute sprite and decal rendering{% endhighlight %}
-<br />I have the same error, how you solved?<br /></blockquote><br />Post the rest of it</p>
+<br />I have the same error, how you solved?<br /></div><br />Post the rest of it</p>
